Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>个人博客 by zhibzeng</title>
+    <title>Tech·Finance by zhibzeng</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>个人博客</h1>
+        <h1>Tech·Finance</h1>
         <h2>技术·金融·数据·生活</h2>
         <a href="https://github.com/zhibzeng" class="button"><small>Follow me on</small> GitHub</a>
       </div>
@@ -28,10 +28,7 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <p>个人博客</p>
-
-<h1>
-<a id="from-zhibzenggithubio" class="anchor" href="#from-zhibzenggithubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>From zhibzeng.github.io</h1>
+          <p>首页文章</p>
         </section>
 
         <aside id="sidebar">
